# finmars-core

./: .coveragerc  .env.sample  .env_dev  .gitignore  .gitlab-ci.yml  .pylintrc  .settings.json  CLA.md  CONTRIBUTING.md  Dockerfile  Dockerfile-old  Makefile  README.md  backend-celery-beat.ini  backend-celery.ini  backend-celerybeat.ini  backend-celerycam.ini  backend.ini  celery-dev.sh  celerybeat-schedule.db  changelog.md  contributors.txt  db_perms2.sqlite3  director.py  docker-compose-dev-dump.yml  docker-compose-dev.yml  docker-compose-stage.yml  docker-compose.override.yml  docker-compose.yml  generate_env.sh  graph.sh  import-sql.sh  manage.py  migrate.sh  pyproject.toml  redis.conf  requirements-dev.txt  requirements-test.txt  requirements.txt  tree.txt  (+1 more)
.ebextensions/: 01setup.config  02swap.config  03django.config  04wsgi.config  05celery.config  05nginx.config  06celery_beat.config
.elasticbeanstalk/: config.yml
data/: bloomberg-dlws.wsdl  countries.csv  currencies.csv  currencies_old.csv  version.txt
director/: README.md  __init__.py  apps.py  cli.py  extensions.py  settings.py
docker/: Dockerfile  Dockerfile-full  Dockerrun.aws.json  celerybeat-config  celeryd  celeryd-config  docker-build.sh  docker-run.sh  filebeat-config  finmars-job-run.sh  finmars-run.sh  redis.conf  supervisor-celery.conf  supervisor-celerybeat.conf  supervisor-devserver.conf  uwsgi-celery.ini  uwsgi-celerybeat.ini  uwsgi-emperor.ini  uwsgi-flower.ini  uwsgi-postgresql.ini  uwsgi-redis.ini  uwsgi-www.ini
finmars-misc/: readme.md
finmars_iam/: __init__.py  access_policy.py  admin.py  apps.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
finmars_standardized_errors/: __init__.py  apps.py  exceptions.py  formatter.py  handler.py  middleware.py  models.py  openapi.py  openapi_hooks.py  openapi_utils.py  serializers.py  settings.py  types.py  views.py
healthcheck/: __init__.py  conf.py  exceptions.py  handlers.py  models.py  views.py
local-development/: run_celery.sh  run_celery_beat.sh  run_celery_dump.sh  run_celery_ping.sh  run_celery_stats.sh  run_cleanup_tasks.sh  run_clear_celery.sh  run_clear_zero_currency_histories.sh  run_collectstatic.sh  run_create_bom_file.sh  run_create_docker_image.sh  run_create_documentation_rst.sh  run_create_layout_user_codes.sh  run_create_offline_api_documentation.sh  run_createmasteruser.sh  run_createsuperuser.sh  run_dbshell_drop_migrations.sh  run_deprecation_test.sh  run_director.sh  run_docker_image.sh  run_documentation.sh  run_export_dump_from_container.sh  run_fix_is_enabled.sh  run_flower.sh  run_get_fancy_name.sh  run_makemigrations.sh  run_migrate.sh  run_migrate_fake.sh  run_migrate_prod_tmp.sh  run_move_input_settings.sh  run_pylint.sh  (+17 more)
(+3297 files in other folders)
