[project]
name = "finmars-backend"
version = "1.14.0"

[tool.isort]
profile="black"
py_version=311
known_django=[
    "django",
    "django_celery_results",
    "django_filters",
    "django_redis",
    "rest_framework",
    "drf_spectacular",
    "drf_yasg",
    "factory",
    "corsheaders"
]
sections=["FUTURE", "STDLIB", "DJANGO",  "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip=["__init__.py", ".gitignore", "templates"]
skip_glob=["venv/*"]

[tool.black]
line-length = 116
target-version = ["py311"]

[tool.ruff]
format = "grouped"
line-length = 116
ignore = ["E501", "F403", "F405"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
