[project]
name = "finmars-backend"
version = "1.16.0"

[tool.ruff]
  line-length = 119
  indent-width = 4
  target-version = "py312"
  extend-exclude = [
    "setup.py",
    "**/migrations/*.py",
    "**/settings.py",
  ]

[tool.ruff.lint]
  select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "PL",   # Pylint
  ]
  ignore = [
    "SIM108",   # Use ternary operator
    "SIM102",   # Use a single if statement instead of nested if statements
    "PLR2004",  # Magic value used in comparison, consider replacing 201 with a constant variable
  ]

[tool.ruff.lint.flake8-quotes]
  inline-quotes = "double"

[tool.ruff.lint.pylint]
  max-args = 20
  max-positional-args = 20
  max-branches = 15

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
source = ["poms"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
title = "Finmars Backend Coverage Report"
